force-app/main/default/objects/Account/fields/IRRM_Sales_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Sales_Process_Status__c</fullName>
    <formula>IF( IRRM_Pre_Deal_Checklist_Rating__c = &quot;IRRM Annual Review Red&quot;,
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;, 20, 40),
IF( ISBLANK( IRRM_Pre_Deal_Checklist__c),
IMAGE(&quot;/resource/Traffic_Light_None&quot;, &quot;None&quot;, 20, 40),
IF( IRRM_Pre_Deal_Checklist_Rating__c = &quot;Green&quot;,
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;, 20, 40),
IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;, 20, 40)
)))</formula>
    <inlineHelpText>Grey - Checklist is not attached, 
Amber - Checklist is attached and status is not green,
Green - Checklist status is green,
Red - Annual Review expired</inlineHelpText>
    <label>IRRM Sales Process Status</label>
    <type>Text</type>
</CustomField>