force-app/main/default/objects/Account/fields/IRRM_Strategy_Paper_Issued__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Strategy_Paper_Issued__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IRRM Strategy Paper Issued</label>
    <type>Date</type>
</CustomField>