force-app/main/default/objects/Account/fields/ISDA__c.field-meta.xml
<CustomField>
    <fullName>ISDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISDA</label>
    <type>Checkbox</type>
</CustomField>