force-app/main/default/objects/Account/fields/ISDA_Date_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>ISDA_Date_of_Agreement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Agreement</label>
    <type>Date</type>
</CustomField>