force-app/main/default/objects/Account/fields/Last_FX_Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_FX_Opportunity_Closed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last FX Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>