force-app/main/default/objects/Account/fields/Last_Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Closed_Date__c</fullName>
    <description>To record the date of the Opportunity Closed Date which has been recently Closed Won</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>