force-app/main/default/objects/Account/fields/LEI_Obtained__c.field-meta.xml
<CustomField>
    <fullName>LEI_Obtained__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LEI Obtained</label>
    <type>Date</type>
</CustomField>