force-app/main/default/objects/Account/fields/LFC__c.field-meta.xml
<CustomField>
    <fullName>LFC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LFC</label>
    <type>Checkbox</type>
</CustomField>