force-app/main/default/objects/Account/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Lost/Dormant Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>