force-app/main/default/objects/Account/fields/Migration_Load_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_Load_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migration Load ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>