force-app/main/default/objects/Account/fields/Misc_Client_Info__c.field-meta.xml
<CustomField>
    <fullName>Misc_Client_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Misc Client Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>