force-app/main/default/objects/Account/fields/Mnemonic__c.field-meta.xml
<CustomField>
    <fullName>Mnemonic__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Kapiti mnemonic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>