force-app/main/default/objects/Account/fields/Non_Bank_Customers__c.field-meta.xml
<CustomField>
    <fullName>Non_Bank_Customers__c</fullName>
    <label>Non Bank Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
                <isActive>false</isActive>
                <label>TBC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>