force-app/main/default/objects/Account/fields/Officer_Code__c.field-meta.xml
<CustomField>
    <fullName>Officer_Code__c</fullName>
    <formula>RM_Name__r.Officer_Code__c</formula>
    <label>Officer Code</label>
    <type>Text</type>
</CustomField>