force-app/main/default/objects/Account/fields/OldCommManagerId__c.field-meta.xml
<CustomField>
    <fullName>OldCommManagerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Commodity Manager Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>