force-app/main/default/objects/Account/fields/OldFXManagerId__c.field-meta.xml
<CustomField>
    <fullName>OldFXManagerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old FX Manager Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>