force-app/main/default/objects/Account/fields/OldIRRMManagerId__c.field-meta.xml
<CustomField>
    <fullName>OldIRRMManagerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old IRRM Manager Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>