force-app/main/default/objects/Account/fields/OldTSMId__c.field-meta.xml
<CustomField>
    <fullName>OldTSMId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old TSM Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>