force-app/main/default/objects/Account/fields/Preferred_FX_Dealing__c.field-meta.xml
<CustomField>
    <fullName>Preferred_FX_Dealing__c</fullName>
    <label>Preferred FX Dealing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eFX</fullName>
            </value>
            <value>
                <fullName>Dealing Room</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>