force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>