force-app/main/default/objects/Account/fields/Prospect_Source__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Source__c</fullName>
    <label>Prospect Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RM Identified</fullName>
            </value>
            <value>
                <fullName>Referral – Internal CYB</fullName>
            </value>
            <value>
                <fullName>Referral – External</fullName>
            </value>
            <value>
                <fullName>Referral – Customer</fullName>
            </value>
            <value>
                <fullName>Banker Referral</fullName>
                <isActive>false</isActive>
                <label>Banker Referral</label>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
                <isActive>false</isActive>
                <label>Customer Referral</label>
            </value>
            <value>
                <fullName>Customer Referral;Self Spotted</fullName>
                <isActive>false</isActive>
                <label>Customer Referral;Self Spotted</label>
            </value>
            <value>
                <fullName>Marketing Campaign</fullName>
                <isActive>false</isActive>
                <label>Marketing Campaign</label>
            </value>
            <value>
                <fullName>Marketing Campaign;Other</fullName>
                <isActive>false</isActive>
                <label>Marketing Campaign;Other</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Self Spotted</fullName>
                <isActive>false</isActive>
                <label>Self Spotted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>