force-app/main/default/objects/Account/fields/Ready_For_Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Annual_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready For Annual Review</label>
    <type>Checkbox</type>
</CustomField>