force-app/main/default/objects/Account/fields/Ready_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Convert</label>
    <type>Checkbox</type>
</CustomField>