force-app/main/default/objects/Account/fields/Registered_To_Use_CYBFX__c.field-meta.xml
<CustomField>
    <fullName>Registered_To_Use_CYBFX__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If box checked,customer is registered to use CYBFX</inlineHelpText>
    <label>Registered To Use CYBFX</label>
    <type>Checkbox</type>
</CustomField>