force-app/main/default/objects/Account/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <errorMessage>Please select an active Banker of a respective branch.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Banker</value>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Banker)</relationshipLabel>
    <relationshipName>AccountBanker</relationshipName>
    <type>Lookup</type>
</CustomField>