force-app/main/default/objects/Account/fields/Trade_Finance_Customer__c.field-meta.xml
<CustomField>
    <fullName>Trade_Finance_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Finance Customer</label>
    <type>Checkbox</type>
</CustomField>