force-app/main/default/objects/Account/fields/Trade_Finance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Trade_Finance_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Finance Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>