force-app/main/default/objects/Account/fields/Treasury_Margins__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Margins__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treasury Margins</label>
    <type>TextArea</type>
</CustomField>