force-app/main/default/objects/Account/fields/Treasury_Solution_Area__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Solution_Area__c</fullName>
    <formula>IF(RM_Name__r.Con_Region__c != Null, RM_Name__r.Con_Region__c, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treasury Solutions Area</label>
    <type>Text</type>
</CustomField>