force-app/main/default/objects/Account/fields/Treasury_Solutions_Area__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Solutions_Area__c</fullName>
    <label>Treasury Solutions Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Migration-Unassigned</fullName>
                <isActive>false</isActive>
                <label>Migration-Unassigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>