force-app/main/default/objects/Account/fields/Treasury_Solutions_Relationship_Team__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Solutions_Relationship_Team__c</fullName>
    <label>CYB Relationship Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Finance</fullName>
            </value>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
            <value>
                <fullName>Payment (Merchant) Services</fullName>
            </value>
            <value>
                <fullName>International Trade</fullName>
            </value>
            <value>
                <fullName>CYB Domiciled Banking Relationship</fullName>
            </value>
            <value>
                <fullName>Business on Line</fullName>
            </value>
            <value>
                <fullName>Standalone Banking Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>