force-app/main/default/objects/Account/fields/US_Persons__c.field-meta.xml
<CustomField>
    <fullName>US_Persons__c</fullName>
    <inlineHelpText>For the definition please refer to the US Person document on the Homepage under the CYB Quick Links section.</inlineHelpText>
    <label>US Persons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>