force-app/main/default/objects/Account/fields/WID__c.field-meta.xml
<CustomField>
    <fullName>WID__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>WID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>