force-app/main/default/objects/Account/validationRules/ACC_Account_creation_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Account_creation_restriction</fullName>
    <active>true</active>
    <description>None of the users should be able to create customer record type - Non even Static Data and Super User</description>
    <errorConditionFormula>AND( 
ISNEW(), 
$Profile.Name&lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name&lt;&gt; &quot;DL Profile&quot;, 
     RecordType.DeveloperName=&quot;Customer&quot;

)</errorConditionFormula>
    <errorMessage>Not Permitted to create Customer</errorMessage>
</ValidationRule>