force-app/main/default/objects/Account/validationRules/ACC_Account_name_should_be_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Account_name_should_be_locked</fullName>
    <active>false</active>
    <description>Account Name for Customer Record Type should not be updated.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Name) &amp;&amp;  RecordType.DeveloperName =&quot;Customer&quot; &amp;&amp; NOT( $Permission.UpdateCustomerNameOnCustomer )</errorConditionFormula>
    <errorMessage>Customer name cannot be changed after it&#39;s created.</errorMessage>
</ValidationRule>