force-app/main/default/objects/Account/validationRules/ACC_Category_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Category_must_be_selected</fullName>
    <active>true</active>
    <description>Category must be selected if the Categorisation Status is selected as Categorised.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Categorisation_Status__c , &quot;Categorised&quot;),
 ISBLANK( TEXT( Categorisation__c ) )
 )</errorConditionFormula>
    <errorDisplayField>Categorisation__c</errorDisplayField>
    <errorMessage>You do not have permission to undertake Categorisation - please amend the categorisation status to &quot;none&quot; in order to proceed.</errorMessage>
</ValidationRule>