force-app/main/default/objects/Account/validationRules/ACC_Change_Categ_status_once_categorised.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Change_Categ_status_once_categorised</fullName>
    <active>true</active>
    <description>User cannot change the status once it is categorised</description>
    <errorConditionFormula>NOT($Permission.CategorisationStatusFCG ) &amp;&amp;    ISPICKVAL(PRIORVALUE( Categorisation_Status__c ), &quot;Categorised&quot;) &amp;&amp;  ISCHANGED(Categorisation_Status__c)</errorConditionFormula>
    <errorDisplayField>Categorisation_Status__c</errorDisplayField>
    <errorMessage>Categorised Status cannot be changed to any other status.</errorMessage>
</ValidationRule>