force-app/main/default/objects/Account/validationRules/ACC_Com_Checklist_is_already_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Com_Checklist_is_already_selected</fullName>
    <active>true</active>
    <description>To check if the selected Commodity checklist is already selected for another account</description>
    <errorConditionFormula>IF( NOT (ISBLANK(Commodity_Pre_Deal_Checklist__c))  &amp;&amp;  (NOT(ISBLANK( Commodity_Pre_Deal_Checklist__r.Customer_Name__c ))) &amp;&amp;   (Commodity_Pre_Deal_Checklist__r.Customer_Name__c &lt;&gt;  Id ), 
TRUE, 
FALSE)</errorConditionFormula>
    <errorDisplayField>Commodity_Pre_Deal_Checklist__c</errorDisplayField>
    <errorMessage>Selected Commodity checklist is already selected for another account</errorMessage>
</ValidationRule>