force-app/main/default/objects/Account/validationRules/ACC_Create_Customer_Account_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Create_Customer_Account_Restriction</fullName>
    <active>true</active>
    <description>Only Static Data Team Can create Customer Account.</description>
    <errorConditionFormula>NOT($Permission.CreateCustomerAccount) &amp;&amp;  ISNEW() &amp;&amp;  RecordType.DeveloperName = &quot;Customer&quot;</errorConditionFormula>
    <errorMessage>Only Static Data Team Can create Customer Account.</errorMessage>
</ValidationRule>