force-app/main/default/objects/Account/validationRules/ACC_FX_Checklist_is_already_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_FX_Checklist_is_already_selected</fullName>
    <active>true</active>
    <description>To check if the selected FX checklist is already selected for another account</description>
    <errorConditionFormula>IF( NOT (ISBLANK(FX_Pre_Deal_Checklist__c))  &amp;&amp;  (NOT(ISBLANK( FX_Pre_Deal_Checklist__r.Customer_Name__c ))) &amp;&amp;   (FX_Pre_Deal_Checklist__r.Customer_Name__c  &lt;&gt;  Id  ), 
TRUE, 
FALSE)</errorConditionFormula>
    <errorDisplayField>FX_Pre_Deal_Checklist__c</errorDisplayField>
    <errorMessage>Selected FX checklist is already selected for another account</errorMessage>
</ValidationRule>