force-app/main/default/objects/Account/validationRules/ACC_Mandatory_Address_on_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Mandatory_Address_on_Customer</fullName>
    <active>true</active>
    <description>Mandatory Address fields on customer page layout for customer record type</description>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Customer&quot; &amp;&amp; ( ISBLANK( BillingCity )  || ISBLANK( BillingStreet) || ISBLANK( BillingPostalCode)))</errorConditionFormula>
    <errorMessage>Please complete the address.</errorMessage>
</ValidationRule>