force-app/main/default/objects/Account/validationRules/ACC_Prevent_RMName_UpdateToNull.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Prevent_RMName_UpdateToNull</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(  RM_Name__c ) &amp;&amp;  (ISBLANK(RM_Name__c)) &amp;&amp; ($Profile.Name&lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>RM Name cannot be Blank</errorMessage>
</ValidationRule>