force-app/main/default/objects/Account/validationRules/ACC_RM_name_should_be_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_RM_name_should_be_locked</fullName>
    <active>true</active>
    <description>To restrict the user to update the RM Name,if the user is not CYB, File Checking or Static Data Team</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; NOT($Permission.UpdateRMNameonCustomer)  &amp;&amp; ISCHANGED(  RM_Name__c )</errorConditionFormula>
    <errorMessage>Only CYB, FCG or Static Data Team can update the RM Name</errorMessage>
</ValidationRule>