force-app/main/default/objects/Account/validationRules/Acc_status_changes_for_TSM_user.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_status_changes_for_TSM_user</fullName>
    <active>true</active>
    <errorConditionFormula>($Profile.Name&lt;&gt;&#39;CYB&#39; &amp;&amp;  NOT(CONTAINS($User.Username, &quot;cybg.crm.integration&quot;)))&amp;&amp;( OR(
ISPICKVAL(Customer_Status__c, &quot;Dormant&quot;),
ISPICKVAL(Customer_Status__c, &quot;Prospect&quot;)
))</errorConditionFormula>
    <errorMessage>Customer status to Dormant or Prospect can only changed by FRSM/TDM .</errorMessage>
</ValidationRule>