force-app/main/default/objects/Account/validationRules/ACC_Update_Account_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Update_Account_Owner</fullName>
    <active>true</active>
    <description>to restrict the users to update the Account Owner</description>
    <errorConditionFormula>NOT($Permission.Update_Owner )  &amp;&amp; ISCHANGED( OwnerId )</errorConditionFormula>
    <errorMessage>Only File Check Group can update the Account Owner.</errorMessage>
</ValidationRule>