force-app/main/default/objects/Account/validationRules/ACC_Update_Date_Customer_Notified.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Update_Date_Customer_Notified</fullName>
    <active>true</active>
    <description>Date customer notified of categorisation cannot be updated before categorisation has been completed</description>
    <errorConditionFormula>ISCHANGED( Date_Customer_Notified_Of_Category__c )  &amp;&amp; NOT(ISPICKVAL( Categorisation_Status__c , &quot;Categorised&quot;))</errorConditionFormula>
    <errorDisplayField>Date_Customer_Notified_Of_Category__c</errorDisplayField>
    <errorMessage>Date customer notified of categorisation cannot be updated before categorisation has been completed</errorMessage>
</ValidationRule>