force-app/main/default/objects/Account/validationRules/ACC_Update_Internal_Customers.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_Update_Internal_Customers</fullName>
    <active>true</active>
    <description>Only FCG can create/Update an Internal Customers</description>
    <errorConditionFormula>NOT($Permission.UpdateInternalCustomers) &amp;&amp;  RecordType.DeveloperName = &quot;Internal&quot;</errorConditionFormula>
    <errorMessage>Only FCG can create/Update an Internal Customers.</errorMessage>
</ValidationRule>