force-app/main/default/objects/Account/validationRules/Account_Banker_should_be_in_Hierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Banker_should_be_in_Hierarchy</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(PRIORVALUE(RM_Name__c))&amp;&amp;ISBLANK(RM_Name__r.Con_Team__c)&amp;&amp; ISCHANGED(RM_Name__c) &amp;&amp; !ISBLANK(RM_Name__c)</errorConditionFormula>
    <errorMessage>Banker Change Failed: The banker is not present in the hierarchy. Please contact the Financial Risk Solutions Team to add the Banker to the hierarchy and then proceed with the change</errorMessage>
</ValidationRule>